[workspace]

members = [
    "intcode",

    "day-1",
    "day-2",
    "day-3",
    "day-4",
    "day-5",
    "day-6",
    "day-7",
    "day-8",
    "day-9",
    "day-10",
    "day-11",
    "day-12",
    "day-13",
    "day-17",
    "day-19",
    "day-22",
    "day-23",

    "integration-test",
]

[profile.release]
debug = true
lto = true
codegen-units = 1
