[package]
name = "day-14"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { git = "https://github.com/utter-step/advent-utils" }
fnv = "1"

[dev-dependencies]
indoc = "1"
