[package]
name = "day-17"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { git = "https://github.com/utter-step/advent-utils" }
intcode = { path = "../intcode" }

itertools = "0.8.2"
suffix = "1.2.0"

[dev-dependencies]
indoc = "0.3.4"
quickcheck = "0.9"
quickcheck_macros = "0.9"
