[package]
name = "day-22"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { git = "https://github.com/utter-step/advent-utils" }

enum_dispatch = "0.3"
serde = { version = "1", features = ["derive"] }

displaydoc = "0.1"
thiserror = "1"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
