[package]
name = "run-all"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { git = "https://github.com/utter-step/advent-utils" }

day-1 = { path = "../day-1" }
day-2 = { path = "../day-2" }
day-3 = { path = "../day-3" }
day-4 = { path = "../day-4" }
day-5 = { path = "../day-5" }
day-6 = { path = "../day-6" }
day-7 = { path = "../day-7" }
day-8 = { path = "../day-8" }
day-9 = { path = "../day-9" }
day-10 = { path = "../day-10" }
day-11 = { path = "../day-11" }
day-12 = { path = "../day-12" }
day-13 = { path = "../day-13" }
day-17 = { path = "../day-17" }
day-19 = { path = "../day-19" }
day-22 = { path = "../day-22" }
day-23 = { path = "../day-23" }
day-24 = { path = "../day-24" }
